Don't load some more elements on mobile Fix some small CSS issues

--- a/app/widgets/ContactData/contactdata.css
+++ b/app/widgets/ContactData/contactdata.css
@@ -1,4 +1,4 @@
-.contact_data ul.list:first-child li:first-child img {
+.contact_data ul.list:first-child li:first-child img.avatar {
     height: 25rem;
     margin-left: 5rem;
     display: inline-block;
